Fix spacing bug

--- a/style.css
+++ b/style.css
@@ -58,6 +58,9 @@ ul, li {
 table {
 	border: 1px solid #444;
 	padding: 0.25em;
+	margin: auto;
+	margin-top: 0.25em;
+	margin-bottom: 0.25em;
 }
 
 td {
@@ -77,6 +80,8 @@ td {
 /******************************************************************************/
 .box {
 	border: 1px solid #444;
+	display: inline-block;
+	padding: 0.125em;
 }
 
 .bubble {
@@ -84,6 +89,7 @@ td {
 	border-radius: 0.6em;
 	padding: 0.25em;
 	margin: 0.1em;
+	display: inline-block;
 }
 
 figure.inline {
@@ -94,7 +100,6 @@ ol.tree, ol.tree ol {
 	list-style-type: lower-roman;
 	padding: 0;
 	padding-left: 2em;
-	overflow-y: hidden;
 }
 ol.tree > li {
 	list-style-type: none;
